# pico-gc-bridge

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yaml  copilot-review-notify.yml
docs/: hardware.md  measurements.md  project_overview.md  transforms.md
examples/bridge/: CMakeLists.txt  debug_log.hpp  main.cpp
examples/debug_probe/: CMakeLists.txt  debug_log.hpp  main.cpp
examples/input_viewer/: CMakeLists.txt  main.cpp
examples/measure/: CMakeLists.txt  main.cpp
examples/measure/domain/: identity.hpp  pad_status_flags.hpp  report.hpp  state.hpp
examples/measure/joybus/codec/: common.hpp  identity_wire.hpp  report_wire.hpp  state_wire.hpp
examples/measure/joybus/driver/: joybus_pio_port.cpp  joybus_pio_port.hpp
examples/measure/joybus/driver/pio/: joybus_console.pio  joybus_pad.pio
examples/measure/joybus/protocol/: protocol.hpp
examples/measure/link/: console_client.cpp  console_client.hpp  pad_client.hpp  pad_console_link.hpp  policy.hpp
examples/measure/link/shared/: shared_console.hpp  shared_pad.hpp  shared_pad_hub.hpp
examples/measure/measure/: pad_injector.hpp  pattern.hpp  scheduler.hpp  seed.hpp
examples/measure/measure/patterns/: stick_grid_sweep.hpp
examples/measure/util/: latch.hpp  latest_slot.hpp
resources/rois/: rois.json
tools/: dump_measurement_rois.py  generate_inverse_lut.py  generate_measurement_csv.py  make_templates_from_dump.py
tools/measurement_lib/: __init__.py  alignment.py  barcode.py  ocr_templates.py  (+1 more)
(+47 files in other folders)
